--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Api\SAppTheme.cs" />
     <Compile Include="Api\SCategory.cs" />
     <Compile Include="Api\SComment.cs" />
+    <Compile Include="Api\SDisplayedNotification.cs" />
     <Compile Include="Api\SGift.cs" />
     <Compile Include="Api\SGoogleAuthentication.cs" />
     <Compile Include="Api\SHardCurrency.cs" />
