--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Controllers\V1\LeaderBoardController.cs" />
     <Compile Include="Controllers\V1\LevelsController.cs" />
     <Compile Include="Controllers\V1\NotificationController.cs" />
+    <Compile Include="Controllers\V1\WatchAdController.cs" />
     <Compile Include="InquiryProcessing\Private\CommentsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\CreatedQuestionsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\StoresInquiryProcessor.cs" />
@@ -170,21 +171,22 @@
     <Compile Include="MaintenanceProcessing\Public\ICodeGiftsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IGlobalApplicationState.cs" />
     <Compile Include="MaintenanceProcessing\Public\IStoresMaintenanceProcessor.cs" />
-    <Compile Include="Security\IMarketManager.cs" />
-    <Compile Include="Security\MarketManager.cs" />
-    <Compile Include="Security\PurchaseVerificationResponse.cs" />
+    <Compile Include="WatchAd\IWatchAdValidationProcessor.cs" />
+    <Compile Include="PurchaseAuthorizer\Public\IMarketManager.cs" />
+    <Compile Include="PurchaseAuthorizer\Private\MarketManager.cs" />
+    <Compile Include="PurchaseAuthorizer\Private\PurchaseVerificationResponse.cs" />
     <Compile Include="Security\Private\BasicAuthenticationMessageHandler.cs" />
     <Compile Include="Security\Private\BasicPrincipalSecurityService.cs" />
     <Compile Include="Security\Private\MarketVerificationProcessor.cs" />
     <Compile Include="Security\Public\IBasicPrincipalSecurityService.cs" />
     <Compile Include="Security\Public\IMarketVerificationProcessor.cs" />
-    <Compile Include="Security\PurchaseVerificationRequest.cs" />
-    <Compile Include="Security\PurchaseVerificationSuccessful.cs" />
-    <Compile Include="Security\RefreshTokenRequest.cs" />
-    <Compile Include="Security\PurchaseVerificationError.cs" />
-    <Compile Include="Security\TokenError.cs" />
-    <Compile Include="Security\TokenRequest.cs" />
-    <Compile Include="Security\TokenResponse.cs" />
+    <Compile Include="PurchaseAuthorizer\Private\PurchaseVerificationRequest.cs" />
+    <Compile Include="PurchaseAuthorizer\Private\PurchaseVerificationSuccessful.cs" />
+    <Compile Include="PurchaseAuthorizer\Private\RefreshTokenRequest.cs" />
+    <Compile Include="PurchaseAuthorizer\Private\PurchaseVerificationError.cs" />
+    <Compile Include="PurchaseAuthorizer\Private\TokenError.cs" />
+    <Compile Include="PurchaseAuthorizer\Private\TokenRequest.cs" />
+    <Compile Include="PurchaseAuthorizer\Private\TokenResponse.cs" />
     <Compile Include="Utilities\Base\FalconApiController.cs" />
     <Compile Include="Controllers\V1\AchievedPosessionsController.cs" />
     <Compile Include="Controllers\V1\ApplicationStatesController.cs" />
@@ -224,6 +226,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="WatchAd\Private\" />
+    <Folder Include="WatchAd\Public\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Falcon.Common\Falcon.Common.csproj">
