--- a/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
+++ b/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServer\Mapping\VersionedClassMap.cs" />
+    <Compile Include="SqlServer\QueryProcessors\AchievementQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\CodeGiftsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\CommentsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\CreatedQuestionsQueryProcessor.cs" />
