--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -161,6 +161,7 @@
     <Compile Include="InquiryProcessing\Private\AppAdvertsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\CommentsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\CreatedQuestionsInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\Private\DWMInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\StoresInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\UsersInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\NotificationInquiryProcessor.cs" />
@@ -168,6 +169,7 @@
     <Compile Include="InquiryProcessing\Public\IAppAdvertsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\ICommentsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\ICreatedQuestionsInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\Public\IDWMInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IPagedDataRequestFactory.cs" />
     <Compile Include="InquiryProcessing\Private\PagedDataRequestFactory.cs" />
     <Compile Include="InquiryProcessing\Public\INotificationInquiryProcessor.cs" />
@@ -175,11 +177,13 @@
     <Compile Include="InquiryProcessing\Public\IUsersInquiryProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\AppAdvertsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\CodeGiftsMaintenanceProcessor.cs" />
+    <Compile Include="MaintenanceProcessing\Private\DWMMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\GlobalApplicationState.cs" />
     <Compile Include="MaintenanceProcessing\Private\StoresMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\WatchAdMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IAppAdvertsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\ICodeGiftsMaintenanceProcessor.cs" />
+    <Compile Include="MaintenanceProcessing\Public\IDWMMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IGlobalApplicationState.cs" />
     <Compile Include="MaintenanceProcessing\Public\IStoresMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IWatchAdMaintenanceProcessor.cs" />
