adding spin wheel processors , category bugfix

--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api\ClientAppState.cs" />
+    <Compile Include="Api\SAchieveSpinWheelValidation.cs" />
     <Compile Include="Api\SAppAdvert.cs" />
     <Compile Include="Api\SApplicationState.cs" />
     <Compile Include="Api\SAvatarState.cs" />
