--- a/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
+++ b/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
@@ -47,6 +47,8 @@
     <Compile Include="PagedDataRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryProcessors\IAchievementQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\IAvatarsQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\ICategoriesQueryProcessor.cs" />
     <Compile Include="QueryProcessors\ICodeGiftsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\ICommentsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\ICreatedQuestionsQueryProcessor.cs" />
@@ -57,6 +59,7 @@
     <Compile Include="QueryProcessors\IAppAdvertsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\ISpinWheelQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IStoresQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\IThemesQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IUserQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IWatchAdQueryProcessor.cs" />
     <Compile Include="QueryResult.cs" />
