--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -191,6 +191,7 @@
     <Compile Include="MaintenanceProcessing\Private\CodeGiftsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\DWMMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\GlobalApplicationState.cs" />
+    <Compile Include="MaintenanceProcessing\Private\ItemPurchaseManager.cs" />
     <Compile Include="MaintenanceProcessing\Private\SpinWheelMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\StoresMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\ThemesMaintenanceProcessor.cs" />
@@ -201,6 +202,7 @@
     <Compile Include="MaintenanceProcessing\Public\ICodeGiftsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IDWMMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IGlobalApplicationState.cs" />
+    <Compile Include="MaintenanceProcessing\Public\IItemPurchaseManager.cs" />
     <Compile Include="MaintenanceProcessing\Public\ISpinWheelMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IStoresMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IThemesMaintenanceProcessor.cs" />
