adding User Stat , spin wheel prize logic

--- a/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
+++ b/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
@@ -62,6 +62,7 @@
     <Compile Include="QueryProcessors\IThemesQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IUserQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IWatchAdQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\IUserStatQueryProcessor.cs" />
     <Compile Include="QueryResult.cs" />
     <Compile Include="ResultPagingUtility.cs" />
   </ItemGroup>
