--- a/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
+++ b/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
@@ -56,6 +56,7 @@
     <Compile Include="SqlServer\QueryProcessors\AchievementQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\AvatarsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\CategoriesQueryProcessor.cs" />
+    <Compile Include="SqlServer\QueryProcessors\CharacteristicsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\CodeGiftsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\CommentsQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\CreatedQuestionsQueryProcessor.cs" />
