adding page base LeaderBoard

--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Api\ClientAppState.cs" />
     <Compile Include="Api\SCharacteristic.cs" />
+    <Compile Include="Api\SCharcteristicLeaderBoard.cs" />
     <Compile Include="Api\SUserStat.cs" />
     <Compile Include="Api\SAchieveSpinWheelValidation.cs" />
     <Compile Include="Api\SAppAdvert.cs" />
