--- a/Source/Falcon/src/Falcon.Web.Api/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.config
@@ -32,11 +32,16 @@
   </log4net>
   <connectionStrings>
     <!--Online Connection-->
-    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=31.25.89.211,2012;Initial Catalog=database_what_if;Persist Security Info=True;User ID=JebAsp;Password=@@@Visualbasic7;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-    providerName="System.Data.EntityClient" />
+    
+    <!--<add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=31.25.89.211,2012;Initial Catalog=database_what_if;Persist Security Info=True;User ID=JebAsp;Password=@@@Visualbasic7;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="HangFire" connectionString="Data Source=DESKTOP-IBHM4S7;Initial Catalog=HangFire;Integrated Security=True" />-->
+    
     <!--Local Conncetion-->
-    <!--<add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IBHM4S7;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="UserDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UserDataContext-20170110183041; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UserDataContext-20170110183041.mdf" providerName="System.Data.SqlClient" />-->
+    
+    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IBHM4S7;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UserDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UserDataContext-20170110183041; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UserDataContext-20170110183041.mdf" providerName="System.Data.SqlClient" />
+    <add name="HangFire" connectionString="Data Source=DESKTOP-IBHM4S7;Initial Catalog=HangFire;Integrated Security=True" />
+    
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
@@ -72,6 +77,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
