--- a/Source/Falcon/src/Falcon.Web.Api/packages.config
+++ b/Source/Falcon/src/Falcon.Web.Api/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="AutoMapper" version="5.2.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="Hangfire.Core" version="1.6.13" targetFramework="net46" />
+  <package id="Hangfire.Ninject" version="1.2.0" targetFramework="net46" />
+  <package id="Hangfire.SqlServer" version="1.6.13" targetFramework="net46" />
   <package id="log4net" version="2.0.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
@@ -12,10 +15,13 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
   <package id="Ninject" version="3.2.0.0" targetFramework="net46" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net46" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net46" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
 </packages>
